--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <h1 class="hero-title">Testing Real-Time Reinforcement Learning in Duckiematrix</h1>
                     <p class="hero-subtitle">Exploring the challenges and opportunities of real-time RL in simulated autonomous driving environments</p>
                     <div class="hero-meta">
-                        <span class="author">Duckietown Research Team</span>
+                        <span class="author">Guillaume Gagné-Labelle, Gabriel Sasseville and Nicolas Bosteels</span>
                         <span class="date">2024</span>
                     </div>
                 </div>
