--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <div class="nav-container">
                 <a href="#" class="logo">Duckietown</a>
                 <ul class="nav-links">
+                    <li><a href="#abstract">Abstract</a></li>
                     <li><a href="#introduction">Introduction</a></li>
                     <li><a href="#methodology">Methodology</a></li>
                     <li><a href="#results">Results</a></li>
