--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             </section>
 
             <!-- Abstract -->
-            <section id="introduction" class="content-section">
+            <section id="abstract" class="content-section">
                 <h2>Abstract</h2>
                 <p>
                     Reinforcement Learning (RL) algorithms often model agent-environment interaction in an idealized manner: the agent observes the 
