--- a/index.html
+++ b/index.html
@@ -58,7 +58,6 @@
                 </p>
             </section>
 
-
             <!-- Introduction -->
             <section id="introduction" class="content-section">
                 <h2>Introduction</h2>
@@ -265,6 +264,7 @@
                     <em>π(a<sub>t</sub> | s<sub>t</sub>)</em>. The environment is run with fixed delays to simulate the time required 
                     for neural network forward passes.
                 </p>
+
                 <div class="table-container">
                     <table class="data-table">
                         <thead>
@@ -368,6 +368,7 @@
                     We test this approach with fixed delays to directly compare against the classical RL baseline and evaluate whether 
                     action conditioning improves performance under delay constraints.
                 </p>
+
                 <div class="table-container">
                     <table class="data-table">
                         <thead>
@@ -471,7 +472,6 @@
                 <p>
                     Even though the policy is not explicitly told the delay value, it experiences the consequences of delay variability through state transitions. Over training it can learn a strategy that is robust in expectation over that distribution: smoother action changes, more conservative steering and throttle, and behaviors that keep the vehicle close to the lane center so occasional long delays are less likely to cause irrecoverable drift. With action conditioning, the previous action also provides context that can help the model learn under this new dynamic.
                 </p>
-
             </section>
 
             <!-- Results -->
@@ -662,18 +662,43 @@
                 <p>
                     Experiment 3 isolates two effects that are often conflated: increasing the mean delay, and the additional penalty introduced by variability and tail events. Across means, performance is expected to degrade as delays become larger. For the same mean, small bounded jitter should be less harmful than heavy tails, since rare long delays can produce very stale actions and abrupt lane departure.
                 </p>
+
                 <div class="plot-container" style="display: flex; flex-direction: column; gap: 2rem; margin: 2rem 0;">
                     <div>
                         <h4>Figure 11: Performance vs Mean Delay (lines = delay regime)</h4>
-                        <img src="gym-duckiematrix/delay_experiments/experiment_3_variable_delay/analysis/exp3_reward_vs_mean_by_regime.png" alt="Experiment 3: performance vs mean delay" style="width: 100%; max-width: 900px; border: 1px solid #ddd; border-radius: 8px;">
+
+                        <img
+                            class="plot-img"
+                            src="/gym-duckiematrix/delay_experiments/experiment_3_variable_delay/analysis/exp3_reward_vs_mean_by_regime.png"
+                            alt="Experiment 3: performance vs mean delay"
+                            loading="lazy"
+                            onerror="this.style.display='none'; this.nextElementSibling.style.display='block';"
+                        >
+                        <div class="plot-img-fallback" style="display:none;">
+                            Missing image: exp3_reward_vs_mean_by_regime.png (check server root + path/case)
+                        </div>
+
                         <p class="plot-caption">Evaluation reward across mean delays, with one curve per delay regime. Each point corresponds to a trained policy evaluated under the same delay regime it was trained on.</p>
                     </div>
+
                     <div>
                         <h4>Figure 12: Absolute Difference vs Fixed Baseline (lines = delay regime)</h4>
-                        <img src="gym-duckiematrix/delay_experiments/experiment_3_variable_delay/analysis/exp3_abs_delta_vs_fixed_across_means.png" alt="Experiment 3: absolute delta vs fixed baseline" style="width: 100%; max-width: 900px; border: 1px solid #ddd; border-radius: 8px;">
+
+                        <img
+                            class="plot-img"
+                            src="/gym-duckiematrix/delay_experiments/experiment_3_variable_delay/analysis/exp3_abs_delta_vs_fixed_across_means.png"
+                            alt="Experiment 3: absolute delta vs fixed baseline"
+                            loading="lazy"
+                            onerror="this.style.display='none'; this.nextElementSibling.style.display='block';"
+                        >
+                        <div class="plot-img-fallback" style="display:none;">
+                            Missing image: exp3_abs_delta_vs_fixed_across_means.png (check server root + path/case)
+                        </div>
+
                         <p class="plot-caption">Absolute change in evaluation reward relative to the fixed-delay baseline at the same mean. Values below zero indicate that variability hurts performance; values above zero indicate that the variable-delay regime performed better than fixed at that mean.</p>
                     </div>
                 </div>
+
                 <p>
                     The overall pattern matches expectations: increasing mean delay tends to reduce performance, and heavy-tailed regimes collapse as delay increases. For the same mean delay, bounded jitter is generally less harmful than heavy tails. We also observed that, at a 0.2s mean delay, some jitter regimes outperformed the fixed-delay run. Given that each configuration was trained once, this should be interpreted cautiously; it is also plausible that stochastic delay can regularize learning. A minimal follow-up would repeat the fixed and jitter conditions with multiple seeds to quantify how often this effect appears.
                 </p>
@@ -805,5 +830,3 @@
     <script src="script.js"></script>
 </body>
 </html>
-
-
