Update blog post with experiment results and plots
- Fixed 0.100s delay evaluation reward in comparison table (-2.03 vs -1.39)
- Updated performance gap calculation for 0.100s delay recovery (+700%)
- All experiment plots and data tables correctly displayed
- Experiment 1: Classical RL with 5 plots (E1.1-E1.5)
- Experiment 2: Real-Time RL with 5 plots (E2.1-E2.5)
- Experiment 3: Variable delay plots (E3.1-E3.2)
- Results section with side-by-side comparisons (Figures 6-10)
- All plots verified to exist and display correctly

--- a/index.html
+++ b/index.html
@@ -315,8 +315,8 @@
                                 <td>200</td>
                                 <td>5.28</td>
                                 <td>12.18</td>
-                                <td>-1.39</td>
-                                <td>1.263</td>
+                                <td>-2.03</td>
+                                <td>1.230</td>
                                 <td>2000.0</td>
                                 <td>14.13</td>
                             </tr>
@@ -581,8 +581,8 @@
                             <tr>
                                 <td>0.100</td>
                                 <td>Classical RL</td>
-                                <td>-1.39</td>
-                                <td>1.263</td>
+                                <td>-2.03</td>
+                                <td>1.230</td>
                                 <td>2000.0</td>
                                 <td>Baseline (failed)</td>
                             </tr>
@@ -592,7 +592,7 @@
                                 <td>12.17</td>
                                 <td>0.177</td>
                                 <td>2000.0</td>
-                                <td>+975% (recovery)</td>
+                                <td>+700% (recovery)</td>
                             </tr>
                             <tr>
                                 <td>0.500</td>
@@ -629,6 +629,9 @@
                         </tbody>
                     </table>
                 </div>
+                <p style="font-size: 0.9em; color: #666; margin-top: 0.5rem;">
+                    <strong>Note:</strong> * 1.000s delay: Both methods failed to learn within 200 training episodes (see Limitations section).
+                </p>
                 
                 <h3>Visual Comparison: Classical RL vs. Real-Time RL</h3>
                 
