--- a/index.html
+++ b/index.html
@@ -827,7 +827,7 @@
                 
                 <h4>Experiment 3: Limited Runs</h4>
                 <p>
-                    Variable-delay experiments expand the number of conditions quickly, since each combination of mean delay and delay regime requires a full training run. Due to limited computational time, we ran a single seed per configuration. This makes the results sensitive to training stochasticity and can plausibly explain some irregularities, such as a fixed-delay run underperforming a jittered counterpart at the same mean. Future work should repeat a subset of configurations across multiple seeds to provide confidence intervals on robustness under variable delay.
+                    Variable-delay experiments expand the number of conditions quickly, since each combination of mean delay and delay distribution requires a full training run. Due to limited computational time, we ran a single seed per configuration. This makes the results sensitive to training stochasticity and can plausibly explain some irregularities, such as a fixed-delay run underperforming a jittered counterpart at the same mean. Future work should repeat these configurations across multiple seeds to provide confidence intervals on robustness under variable delay.
                 </p>
             </section>
 
